--- a/src/sections/projects/style.css
+++ b/src/sections/projects/style.css
@@ -22,7 +22,7 @@
 
 @media screen and (max-width: 1024px) {
   .projects__filter {
-    margin-bottom: 7rem;
+    margin-bottom: 4rem;
   }
 
   .projects__filter-list {
@@ -33,10 +33,6 @@
 @media screen and (max-width: 768px) {
   .projects {
     padding-bottom: 5rem;
-  }
-
-  .projects__filter {
-    margin-bottom: 5rem;
   }
 
   .projects__filter-list {
