--- a/src/sections/promo/style.css
+++ b/src/sections/promo/style.css
@@ -172,7 +172,7 @@
   .promo {
     padding-top: 5rem;
     padding-bottom: 0;
-    margin-bottom: 4rem;
+    margin-bottom: 3rem;
   }
 
   .promo__wrapper {
